--- a/app/views/users/report_card.html.erb
+++ b/app/views/users/report_card.html.erb
@@ -1,15 +1,42 @@
 <h1>Report Card</h1>
 
-<% @reports.each do |report| %>
-  <div>
-    <% report[:district].offices.each do |office|  %>
-
-          <h5><%= office.title %> - <%= report[:district].name %></h5>
-          <ul>
-              <% office.candidates.each do |candidate| %>
-                  <li><%= candidate.user.name %></li>
-              <% end %>
-          </ul>
-    <% end %>
-  </div>
-<% end %>
+<div class='row'>
+  <div class="col-md-3">
+    <div class="mg-r">
+      <img src=<%= @twitter_profile_image %> class='debug img-thumbnail' height="200" width="200">
+      <ul class='d-i debug'>
+        <li class='fs-xl mg-t p-l'><%= @twitter_profile_name %></li>
+        <li class='fs-m p-l'><%= @twitter_handle %></li>
+      </ul>
+    </div>
+  <div class="col-md-9 debug">
+    <div class='h-m'></div>
+     <ul class='p-s mg-b'>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-s'>WATCHINGS<span class='d-b txt-c fs-l'>20</span></span>
+          </a>
+        </li>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-s'>WATCHED<span class='d-b txt-c fs-l'>100</span></span>
+          </a>
+        </li>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-s'>ENDORSED<span class='d-b txt-c fs-l'>32</span></span>
+          </a>
+        </li>
+      </ul>
+    <ul class='nav nav-tabs bg-w row txt-c'>
+      <li class="active"><a href="#watching" data-toggle="tab"><strong>People I Watch</strong></a></li>
+      <li><a href="#endorse" data-toggle='tab'><strong>People I Endorse</strong></a></li>
+    </ul>
+    <div class='tab-content'>
+      <div class='tab-pane active' id='watching'>
+        <%= render "shared/organization_watch" %>
+    </div>
+        <%= render "/shared/candidate_endorse" %>
+</div>
+</div>
+</div>
