--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -54,7 +54,7 @@
     <div class='rcorners bg-w row txt-c tab-pane active' id='organizations'>
       <%= render "shared/organizations_to_watch" %>
     </div>
-    <div class='rcorners bg-w row txt-c tab-pane active' id='candidates'>
+    <div class='rcorners bg-w row txt-c tab-pane' id='candidates'>
       <%= render "shared/candidates_to_watch" %>
     </div>
 
