--- a/app/views/shared/_district_form.html.erb
+++ b/app/views/shared/_district_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_for current_user do |f| %>
+<%= form_for current_user, url: update_district_path(@user), method: :put do |f| %>
 
 <li class='fs-l mg-t p-l'><%= f.label :where_will_you_vote? %></li>
 
 <li class='fs-l mg-t p-l'><%= f.text_field :populate_district , :class => "glyphicon-search", :placeholder => "Please input your district" %></li>
 
-<li class='fs-l mg-t p-l'><%= f.submit "Update your district", :class => "form-control" %></li>
+<li class='fs-l mg-t p-l'><%= f.submit "Update your district", :class => "form-control", :id => "setDistrict" %></li>
 
 <% end %>
