Fix color in endorsement aside

--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -46,7 +46,7 @@ ul { list-style: none; }
 
 .c-b { color: blue; }
 
-.c-g { color: grey; }
+.c-gy { color: grey; }
 
 .p-a { position: absolute; }
 
