--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,23 +58,24 @@
         </div>
       </div>
       </div>
-      <div class="col-md-3 mg bg-w debug">
-        <h4 class='fw-t txt-c'>Recent Endorsements</h4>
-        <div>
-          <dl class='p-l-m'>
-            <dt><a href="google.com">Planned Parenting</a></dt>
-            <dd><span>Hillary Clinton<span> for president</dd>
-            <dd class='c-g'><span>32</span> endorsements for this candidate</dd>
-            <dt><a href='msn.com'>Peeper Rams</a></dt>
-            <dd><span>Robert Baker<span> for vice president</dd>
-            <dd class='c-g'><span>532</span> endorsements for this candidate</dd>
-            <dt><a href="google.com">Grasshopperz</a></dt>
-            <dd><span>Tom Lee<span> for mayor</dd>
-            <dd class='c-g'><span>1000</span> endorsements for this candidate</dd>
-            <dt><a href='msn.com'>DBC</a></dt>
-            <dd><span>Felix Lobkowicz<span> for governor</dd>
-            <dd class='c-g'><span>120</span> endorsements for this candidate</dd>
-          </dl>
-        </div>
-      </div>
-    </div>
+
+<div class="col-md-3 mg bg-w debug">
+  <h4 class='fw-t txt-c'>Recent Endorsements</h4>
+  <div>
+    <dl class='p-l-m'>
+      <dt><a href="google.com">Planned Parenting</a></dt>
+      <dd><span>Hillary Clinton<span> for president</dd>
+      <dd class='c-gy'><span>32</span> endorsements for this candidate</dd>
+      <dt><a href='msn.com'>Peeper Rams</a></dt>
+      <dd><span>Robert Baker<span> for vice president</dd>
+      <dd class='c-gy'><span>532</span> endorsements for this candidate</dd>
+      <dt><a href="google.com">Grasshopperz</a></dt>
+      <dd><span>Tom Lee<span> for mayor</dd>
+      <dd class='c-gy'><span>1000</span> endorsements for this candidate</dd>
+      <dt><a href='msn.com'>DBC</a></dt>
+      <dd><span>Felix Lobkowicz<span> for governor</dd>
+      <dd class='c-gy'><span>120</span> endorsements for this candidate</dd>
+    </dl>
+  </div>
+</div>
+</div>
