--- a/app/views/shared/_district_form.html.erb
+++ b/app/views/shared/_district_form.html.erb
@@ -2,8 +2,8 @@
 
 <li class='fs-l mg-t p-l'><%= f.label :where_will_you_vote? %></li>
 
-<li class='fs-l mg-t p-l'><%= f.text_field :populate_district , :class => "glyphicon-search", :placeholder => "Please input your district" %></li>
+<li class='fs-l mg-t p-l'><%= f.text_field :populate_district , :class => "glyphicon-search", :placeholder => "Please input your district", :id => "setDistrict" %></li>
 
-<li class='fs-l mg-t p-l'><%= f.submit "Update your district", :class => "form-control", :id => "setDistrict" %></li>
+<li class='fs-l mg-t p-l'><%= f.submit "Update your district", :class => "form-control" %></li>
 
 <% end %>
