Begin table design

--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -26,7 +26,7 @@ ul { list-style: none; }
 
 .w { width: 100%; }
 
-.w-m { width: 80%; }
+.w-m { width: 65%; }
 
 .h-m { height: 9em; }
 
@@ -46,7 +46,7 @@ ul { list-style: none; }
 
 .c-b { color: blue; }
 
-.c-g { color: grey; }
+.c-gy { color: grey; }
 
 .p-a { position: absolute; }
 
@@ -83,6 +83,8 @@ ul { list-style: none; }
 .mg { margin: .3em .3em .3em .3em;}
 
 .mg-b-z { margin-bottom: 0 }
+
+.m-a {margin-left: auto; margin-right: auto; }
 
 .d-i { display: inline-block; }
 
