--- a/app/views/users/report_card.html.erb
+++ b/app/views/users/report_card.html.erb
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class="col-md-3">
+  <div class="col-md-2">
     <div class="mg-r">
       <img src=<%= @twitter_profile_image %> class='debug img-thumbnail' height="200" width="200">
       <ul class='d-i debug'>
@@ -7,66 +7,79 @@
         <li class='fs-m p-l'><%= @twitter_handle %></li>
       </ul>
     </div>
+  </div>
+  <div class="col-md-10 debug">
+    <div class='h-m'></div>
+    <ul class='p-s mg-b'>
+      <li class="d-i debug p-r">
+        <a href="#">
+          <span class='fs-s'>WATCHINGS<span class='d-b txt-c fs-l'>20</span></span>
+        </a>
+      </li>
+      <li class="d-i debug p-r">
+        <a href="#">
+          <span class='fs-s'>WATCHED<span class='d-b txt-c fs-l'>100</span></span>
+        </a>
+      </li>
+      <li class="d-i debug p-r">
+        <a href="#">
+          <span class='fs-s'>ENDORSED<span class='d-b txt-c fs-l'>32</span></span>
+        </a>
+      </li>
+    </ul>
     <div class="p-s rcorners bg-w mg-t mg-r">
-      <a href="#"><p class="txt-c fs-l">Compatibility Report</p></a>
+      <p class="txt-c fs-l c-g">Compatibility Report</p>
       <p class='fs-xm txt-c'>Which candidates share my values?</p>
-      <table class='w mg'>
-        <tr>
-          <th colspan="2" class='txt-c p-t'>President</th>
-        </tr>
+      <h4 class='m-a w-m p-t'>National Election 2016:</h4>
+      <table class='table table-hover m-a w-m'>
+        <thead>
+          <tr>
+            <th colspan="2" class='txt-c p-t'>President</th>
+          </tr>
+        </thead>
         <tr>
           <td>Hillary Clinton</td>
-
-          <td>48%</td>
+          <td>
+            <details>
+              <summary>48%</summary>
+              <ul>
+                <li>Organization 1</li>
+                <li>Organization 2</li>
+                <li>Organization 3</li>
+                <li>Organization 4</li>
+                <li>Organization 5</li>
+              </ul>
+            </details>
+          </td>
         </tr>
         <tr>
           <td>Donald Trump</td>
-
           <td>28%</td>
         </tr>
         <tr>
           <td>Undecided</td>
-
           <td>34%</td>
         </tr>
-        <th colspan="2" class='txt-c p-t'>Vice President</th>
+      </table>
+      <table class='table table-hover m-a w-m'>
+        <thead>
+          <tr>
+            <th colspan="2" class='txt-c p-t'>President</th>
+          </tr>
+        </thead>
+        <tr>
+          <td>Hillary Clinton</td>
+          <td>48%</td>
         </tr>
         <tr>
-          <td>Jeb Bush</td>
-
-          <td>18%</td>
+          <td>Donald Trump</td>
+          <td>28%</td>
+        </tr>
+        <tr>
+          <td>Undecided</td>
+          <td>34%</td>
         </tr>
       </table>
     </div>
   </div>
-  <div class="col-md-9 debug">
-    <div class='h-m'></div>
-     <ul class='p-s mg-b'>
-        <li class="d-i debug p-r">
-          <a href="#">
-            <span class='fs-s'>WATCHINGS<span class='d-b txt-c fs-l'>20</span></span>
-          </a>
-        </li>
-        <li class="d-i debug p-r">
-          <a href="#">
-            <span class='fs-s'>WATCHED<span class='d-b txt-c fs-l'>100</span></span>
-          </a>
-        </li>
-        <li class="d-i debug p-r">
-          <a href="#">
-            <span class='fs-s'>ENDORSED<span class='d-b txt-c fs-l'>32</span></span>
-          </a>
-        </li>
-      </ul>
-    <ul class='nav nav-tabs bg-w row txt-c'>
-      <li class="active"><a href="#watching" data-toggle="tab"><strong>People I Watch</strong></a></li>
-      <li><a href="#endorse" data-toggle='tab'><strong>People I Endorse</strong></a></li>
-    </ul>
-    <div class='tab-content'>
-      <div class='tab-pane active' id='watching'>
-        <%= render "shared/organization_watch" %>
-    </div>
-        <%= render "/shared/candidate_endorse" %>
-</div>
-</div>
 </div>
