--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -15,8 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class=><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
-        <li class=><a href=
-          <%= @current_user_path %>
+        <li class=><a href="/users/<%= current_user.id %>"
           ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
         <li class=><a href=
           <% if @logged_in %>
