Fix links in the nav bar

--- a/app/views/users/report_card.html.erb
+++ b/app/views/users/report_card.html.erb
@@ -54,11 +54,27 @@
         </tr>
         <tr>
           <td>Donald Trump</td>
-          <td>28%</td>
+          <td>
+           <details>
+              <summary>13%</summary>
+              <ul>
+                <li>Organization 1</li>
+              </ul>
+            </details>
+          </td>
         </tr>
         <tr>
           <td>Undecided</td>
-          <td>34%</td>
+          <td>
+            <details>
+              <summary>30%</summary>
+              <ul>
+                <li>Organization 1</li>
+                <li>Organization 2</li>
+                <li>Organization 3</li>
+              </ul>
+            </details>
+          </td>
         </tr>
       </table>
       <table class='table table-hover m-a w-m'>
@@ -69,15 +85,42 @@
         </thead>
         <tr>
           <td>Hillary Clinton</td>
-          <td>48%</td>
+          <td>
+            <details>
+              <summary>48%</summary>
+              <ul>
+                <li>Organization 1</li>
+                <li>Organization 2</li>
+                <li>Organization 3</li>
+                <li>Organization 4</li>
+                <li>Organization 5</li>
+              </ul>
+            </details>
+          </td>
         </tr>
         <tr>
           <td>Donald Trump</td>
-          <td>28%</td>
+          <td>
+           <details>
+              <summary>13%</summary>
+              <ul>
+                <li>Organization 1</li>
+              </ul>
+            </details>
+          </td>
         </tr>
         <tr>
           <td>Undecided</td>
-          <td>34%</td>
+          <td>
+            <details>
+              <summary>30%</summary>
+              <ul>
+                <li>Organization 1</li>
+                <li>Organization 2</li>
+                <li>Organization 3</li>
+              </ul>
+            </details>
+          </td>
         </tr>
       </table>
     </div>
