--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
       </ul>
     </div>
     <div class="p-s rcorners bg-w mg-t mg-r">
-      <a href="users/"<%= @current_user.id %>"/report_card"><p class="txt-c fs-l">Compatibility Report</p></a>
+      <a href="<%= @current_user ? report_path(@current_user) : "#" %>"><p class="txt-c fs-l">Compatibility Report</p></a>
       <p class='fs-xm txt-c'>Which candidates share my values?</p>
       <table class='w mg'>
         <tr>
