--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -14,9 +14,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class=><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
-        <li class=><a href="<%= @current_user ? show_path(@current_user) : "#" %>"
-          ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
+        <% if request.path != "/" %>
+          <li class=><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
+        <% end %>
+        <% if @current_user && @user != @current_user %>
+          <li class=><a href="<%= @current_user ? show_path(@current_user) : "#" %>"
+          ><span class="glyphicon glyphicon-user" aria-hidden="true"></span><%= " My" if @current_user != @user && request.path != "/" %> Profile <span class="sr-only">(current)</span></a></li>
+        <% end %>
         <li class=><a href=
           <% if @logged_in %>
           <%= "/deauth/twitter" %>
