--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -25,7 +25,7 @@
           <% if @logged_in %>
           <%= "/deauth/twitter" %>
           <% else %>
-          <%= "auth/twitter" %>
+          <%= "/auth/twitter" %>
           <% end %>
 
           ><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
