--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,12 +5,14 @@
       <ul class='d-i debug'>
         <li class='fs-xl mg-t p-l'><%= @twitter_profile_name %></li>
         <li class='fs-m p-l'><%= @twitter_handle %></li>
+        <% if @current_user %>
           <%= render 'shared/district_form' %>
+        <% end %>
       </ul>
     </div>
     <div class="p-s rcorners bg-w mg-t mg-r">
-      <a href="<%= @current_user ? report_path(@current_user) : "#" %>"><p class="txt-c fs-l">Compatibility Report</p></a>
-      <p class='fs-xm txt-c'>Which candidates share my values?</p>
+      <a href="<%= @current_user ? report_path(@user) : "#" %>"><p class="txt-c fs-l">Compatibility Report</p></a>
+      <p class='fs-xm txt-c'>Which candidates share <%= @current_user == @user ? "my values?" : @user.name + "'s values?" %></p>
       <table class='w mg'>
         <tr>
           <th colspan="2" class='txt-c p-t'>President</th>
