--- a/app/views/shared/_candidate_endorse.html.erb
+++ b/app/views/shared/_candidate_endorse.html.erb
@@ -3,7 +3,7 @@
 <div class=<%= twitteruser.image %> id="endorse">
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
       <div class='col-md-9 mg p-s debug'>
-      <a href="#"><strong><%= twitteruser.name %></strong></a href="#">
+      <a href="<%= show_path(twitteruser) %>"><strong><%= twitteruser.name %></strong></a href="#">
       <ul class='mg-l'>
         <li><%= twitteruser.description %></li>
         <li>Endorsed by: Sierra Club</li>
