--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -1,22 +1,18 @@
-
 <% @organizations.each do |organization| %>
- <div class='rcorners bg-w row txt-c'>
+<div class='rcorners bg-w row txt-c'>
   <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-        <div class='col-md-9 mg p-s debug'>
-
-        <table class='debug w txt-c'>
-
-              <tr class='debug'>
-                <td><%= organization.name %></td>
-              <% if @logged_in %>
-                <td><%= button_to "Watch", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
-              <% else %>
-                  <!-- this below button doesnt work for now -->
-                <td><%= button_to "Watch", login_and_watch_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></td>
-              </tr>
-          <% end %>
-        </table>
-      </div>
-    </div>
+  <div class='col-md-9 mg p-s debug'>
+    <table class='debug w txt-c'>
+      <tr class='debug'>
+        <td><a href="<%= show_path(organization) %>"><%= organization.name %></a></td>
+        <% if @logged_in %>
+        <td><%= button_to "Watch", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
+        <% else %>
+        <!-- this below button doesnt work for now -->
+        <td><%= button_to "Watch", login_and_watch_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
 <% end %>
-
