fix homepage images

--- a/app/views/shared/_candidates_to_watch.html.erb
+++ b/app/views/shared/_candidates_to_watch.html.erb
@@ -2,7 +2,7 @@
 <% @candidates.each do |candidate| %>
 
 <div class='rcorners bg-w row'>
-<img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
+<img src=<%= candidate.image %> alt="" class='mg p-s col-md-2'>
       <div class='col-md-9 mg p-s debug'>
       <table class='debug w txt-c'>
             <tr class='debug'>
