--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -78,7 +78,7 @@
       <dd><span>Tom Lee<span> for mayor</dd>
       <dd class='c-gy'><span>1000</span> endorsements for this candidate</dd>
       <dt><a href='msn.com'>DBC</a></dt>
-      <dd><span>Felix Lobkowicz<span> for governor</dd>
+      <dd><span>Felix Lobkowicz<span> for emperor!</dd>
       <dd class='c-gy'><span>120</span> endorsements for this candidate</dd>
     </dl>
   </div>
