--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -1,6 +1,6 @@
 <% @organizations.each do |organization| %>
 <div class='rcorners bg-w row txt-c'>
-  <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
+  <img src=<%= organization.image %> alt="" class='mg p-s col-md-2'>
   <div class='col-md-9 mg p-s debug'>
     <table class='debug w txt-c'>
       <tr class='debug'>
