--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -1,10 +1,15 @@
-<% @organizations.each do |organization| %>
+<% @organizations.each_with_index do |organization, index| %>
 <div class='rcorners bg-w row txt-c'>
   <img src=<%= organization.image %> alt="" class='mg p-s col-md-2'>
   <div class='col-md-9 mg p-s debug'>
     <table class='debug w txt-c'>
       <tr class='debug'>
         <td><a href="<%= show_path(organization) %>"><%= organization.name %></a></td>
+        <ul>
+              <% @candidates_endorsed_by_orgs[index].each do |twitteruser| %>
+                      <li>Endorsing: <%= twitteruser.name %></li>
+                    <% end %>
+        </ul>
         <% if @logged_in %>
         <td><%= button_to "Watch", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
         <% else %>
