--- a/app/views/shared/_candidate_endorse.html.erb
+++ b/app/views/shared/_candidate_endorse.html.erb
@@ -1,6 +1,6 @@
 <% @endorsed_candidates.each_with_index do |twitteruser, index| %>
-<div class=<%= twitteruser.image %>>
-  <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
+<div class='rcorners bg-w row txt-c'>
+  <img src="<%= twitteruser.image %>" alt="" class='mg p-s col-md-2'>
   <div class='col-md-9 mg p-s debug'>
   <a href="<%= show_path(twitteruser) %>"><strong><%= twitteruser.name %></strong></a href="#">
   <ul class='mg-l'>
