--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -69,7 +69,9 @@
       <div class='tab-pane active' id='watching'>
         <%= render "shared/organization_watch" %>
     </div>
+    <div class='tab-pane' id='endorse'>
         <%= render "/shared/candidate_endorse" %>
+      </div>
 </div>
 </div>
 </div>
