fixing unwatch on show

--- a/app/views/shared/_organization_watch.html.erb
+++ b/app/views/shared/_organization_watch.html.erb
@@ -32,6 +32,7 @@ var unwatchListener = function () {
     console.log("submitted!")
     var url = this.action;
     var target = this.parentElement.parentElement.parentElement.parentElement;
+    debugger
     unwatch(url, target);
   });
 
